--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -17,6 +17,15 @@ body:
   attributes:
     value: "### Describe what improvement you would like to see in the documentation."
 
+- type: checkboxes
+  attributes:
+    label: Is there an existing issue for this?
+    description: |
+      Please search the [issue tracker](https://github.com/nilearn/nilearn/issues?q=is%3Aissue) to see if an issue already exists for the documentation enhancement you want.
+    options:
+    - label: I have searched the existing issues
+      required: true
+
 - type: textarea
   attributes:
     label: " "
