--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -26,7 +26,7 @@ body:
 
 - type: textarea
   attributes:
-    label: " "
+    label: Describe your proposed suggestion in detail.
     placeholder: Describe your proposed suggestion in detail.
   validations:
     required: true
