Apply suggestions from code review
Co-authored-by: Gensollen <nicolas.gensollen@gmail.com>

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -87,7 +87,7 @@ body:
   attributes:
     label: Current behavior & error messages
     description: |
-      Describe what you happened.
+      Describe what happened.
 
       If possible paste below any eventual warning or error message with the stack trace.
 
