--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ files: |
         | maint_tools
         | setup.*
         | nilearn/__init__.py
-        | nilearn/utils
+        | nilearn/_utils
         | nilearn/signal.py
         | nilearn/masking.py
         | nilearn/conftest.py
