run precommit and fix flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -82,7 +82,7 @@ max-line-length = 79
 max_complexity = 43
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
-	# D100, D103, D104: missing docstring
+	# D100, D101, D102, D103, D104: missing docstring
 	# D105: missing docstring in magic method
 	# D107: missing docstring in __init__
 	# D205: 1 blank line required between summary line and description
@@ -95,8 +95,8 @@ max_complexity = 43
 per-file-ignores =
 	setup.py: D100
     # - docstrings rules that should not be applied to tests
-	*/tests/*: D100, D103, D104, D205, D400, D401
-	*/*/tests/*: D100, D103, D104, D205, D400, D401
+	*/tests/*: D100, D101, D102, D103, D104, D205, D400, D401
+	*/*/tests/*: D100, D101, D102, D103, D104, D205, D400, D401
     # - docstrings rules that should not be applied to examples
 	examples/*/*: D103, D205, D301, D400
     # - docstrings rules that should not be applied to doc
