--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ files: |
         | nilearn/signal.py
         | nilearn/masking.py
         | nilearn/conftest.py
+        | nilearn/version.py
         | nilearn/de.*
         | nilearn/connectome/.*py
         | nilearn/image/.*py
