--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -46,6 +46,4 @@ jobs:
             nilearn/image \
             nilearn/mass_univariate \
             nilearn/regions \
-            nilearn/signal.py \
-            nilearn/masking.py \
-            nilearn/conftest.py
+            nilearn/*.py
