--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -39,6 +39,4 @@ jobs:
             nilearn/image \
             nilearn/mass_univariate \
             nilearn/regions \
-            nilearn/signal.py \
-            nilearn/masking.py \
-            nilearn/conftest.py
+            nilearn/*.py
