--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -34,7 +34,7 @@ jobs:
             examples/0[0234567]* \
             maint_tools \
             setup.py \
-            nilerarn/_utils \
+            nilearn/_utils \
             nilearn/connectome \
             nilearn/de* \
             nilearn/image \
