--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ include = """
   | nilearn/image/.*py
   | nilearn/mass_univariate/.*py
   | nilearn/regions/.*py
+  | nilearn/tests/.*py
   | nilearn/signal.py
   | nilearn/masking.py
   | nilearn/conftest.py
@@ -19,6 +20,8 @@ include = """
 extend-exclude =  '''
 (
   nilearn/externals
+  | nilearn/tests/test_common.py
+  | nilearn/tests/test_masking.py
   | examples/.*/.*3d_map_to_surface_projection.py
   | examples/.*/.*demo_glass_brain.py
   | examples/.*/.*demo_glass_brain_extensive.py
