--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ include = """
   | maint_tools/.*py
   | setup.py
   | nilearn/connectome/.*py
+  | nilearn/datasets/
   | nilearn/dec.*
   | nilearn/image/.*py
   | nilearn/mass_univariate/.*py
@@ -36,6 +37,9 @@ extend-exclude =  '''
   | examples/.*/.*surf_stat_map.py
   | examples/.*/.*surface_bids_analysis.py
   | examples/.*/.*surface_projection_strategies.py
+  | nilearn/datasets/neurovault.py
+  | nilearn/datasets/struct.py
+  | nilearn/datasets/tests/test_struct.py
 )
 '''
 
