--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -42,6 +42,7 @@ jobs:
             maint_tools \
             setup.py \
             nilearn/connectome \
+            nilearn/datasets \
             nilearn/de* \
             nilearn/image \
             nilearn/mass_univariate \
