--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,7 @@ max_function_length = 150
 	# W504: line break after binary operator
 per-file-ignores =
 	setup.py: D100
+	*/__init__.py: D100, D103, D104
     # - docstrings rules that should not be applied to tests
 	*/tests/*: D100, D103, D104, D205, D400, D401
 	*/*/tests/*: D100, D103, D104, D205, D400, D401
@@ -118,5 +119,5 @@ addopts =
 	--durations=0
 
 [codespell]
-skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,.mypy_cache,env,venv
+skip = .git,.mypy_cache,*localizer_behavioural.tsv,jquery.min.js,plotly-gl3d-latest.min.js,env,venv,tmp
 ignore-words = .github/codespell_ignore_words.txt
