--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,10 +27,10 @@ files: |
         | nilearn/version.py
         | nilearn/datasets/.*
         | nilearn/de.*
-        | nilearn/connectome/.*py
-        | nilearn/image/.*py
-        | nilearn/regions.*py
-        | nilearn/mass_univariate/.*py
+        | nilearn/connectome/.*
+        | nilearn/image/.*
+        | nilearn/regions.*
+        | nilearn/mass_univariate/.*
     )$
 
 exclude: |
@@ -53,8 +53,6 @@ exclude: |
         | examples/.*/.*surf_stat_map.py
         | examples/.*/.*surface_bids_analysis.py
         | examples/.*/.*surface_projection_strategies.py
-        | nilearn/datasets/description/fsaverage\.rst
-        | nilearn/datasets/description/fsaverage[3-6]\.rst
         | nilearn/externals/tempita
     )$
 
