--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -94,11 +94,11 @@ repos:
     rev: v2.2.4
     hooks:
       - id: codespell
-        args: [--config=setup.cfg]
+        args: [--config=pyproject.toml]
 
   - repo: https://github.com/pyCQA/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
-        args: [--config=setup.cfg, --verbose]
-        additional_dependencies: [flake8-docstrings, Flake8-pyproject]
+        args: [--config=pyproject.toml, --verbose]
+        additional_dependencies: [flake8-docstrings, pyproject-flake8]
