--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "hatchling.build"
 [project]
 name = "nilearn"
 description = "Statistical learning for neuroimaging in Python"
-long_description = [{ file = "README.rst" }]
-authors = [{ name = "Nilearn developers" }]
-maintainers = [{ name = "Bertrand Thirion", email = "bertrand.thirion@inria.fr" }]
+long_description = { file = "README.rst" }
+authors = { name = "Nilearn developers" }
+maintainers = { name = "Bertrand Thirion", email = "bertrand.thirion@inria.fr" }
 readme = "README.rst"
 license = { text = "new BSD" }
 requires-python = ">=3.7"
@@ -89,7 +89,7 @@ test = [
 	"pytest-cov",
 ]
 # A combination of dependencies useful for developers
-dev = ["nilearn[plotting,plotly,soc,test]"]
+dev = ["nilearn[plotting,plotly,doc,test]"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["nilearn"]
