--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,16 +168,16 @@ junit_family = "xunit2"
 
 # Requires pyproject-flake8, otherwise use .flake8 file
 [tool.flake8]
-exclude = """
-    .git,
-    __pycache__,
-	env,
-	venv,
-    build,
-    dist,
-	nilearn/externals/tempita
-"""
---select = "D,E,F,W,C90"
+exclude = [
+    ".git",
+    "__pycache__",
+	"env",
+	"venv",
+    "build",
+    "dist",
+	"nilearn/externals/tempita"
+]
+--select = ["D", "E", "F", "W", "C90"]
 docstring-convention = "numpy"
 max-line-length = 79
 max_complexity = 43
@@ -194,19 +194,19 @@ max_function_length = 150
 	# F401: module imported but unused
 	# W503: line break before binary operator
 	# W504: line break after binary operator
-per-file-ignores = """
+per-file-ignores = [
     # - docstrings rules that should not be applied to tests
-	*/tests/*: D100, D103, D104, D205, D400, D401
-	*/*/tests/*: D100, D103, D104, D205, D400, D401
+	"*/tests/*: D100, D103, D104, D205, D400, D401",
+	"*/*/tests/*: D100, D103, D104, D205, D400, D401",
     # - docstrings rules that should not be applied to examples
-	examples/*/*: D103, D205, D301, D400
+	"examples/*/*: D103, D205, D301, D400",
     # - docstrings rules that should not be applied to doc
-	doc/*: D100, D103, F401
-"""
-ignore = "D105, D107, E402, W503, W504, W605"
+	"doc/*: D100, D103, F401",
+]
+ignore = ["D105", "D107", "E402", "W503", "W504", "W605"]
 # for compatibility with black
 # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
-extend-ignore = "E203"
+extend-ignore = ["E203"]
 
 [tool.codespell]
 skip = [
